# blog

./: .editorconfig  .gitignore  .gitmodules  .mcp.json  .prettierignore  CLAUDE.md  LICENSE  Makefile  Pipfile  README.md  archives.html  authors.html  babel.config.mjs  categories.html  devenv.nix  devenv.yaml  eslint.config.mjs  flake.nix  index.html  index2.html  index3.html  index4.html  index5.html  index6.html  package-lock.json  package.json  pelicanconf.py  playwright.config.mjs  postcss.config.js  prettier.config.mjs  publishconf.py  pyproject.toml  ruff.toml  setup.cfg  sitemap.xml  stylelint.config.mjs  tags.html  tipuesearch_content.js  tsconfig.json  webpack.common.config.js  (+3 more)
.ai-agent/: structure.md
.circleci/: config.yml
.claude/: settings.json
.github/: copilot-instructions.md  dependabot.yml
asset/: custom.css
author/: mizunashi-mana.html  mizunashi-mana2.html  mizunashi-mana3.html  mizunashi-mana4.html  mizunashi-mana5.html  mizunashi-mana6.html
category/: gou-xiang.html  gui-fan.html  gui-ge.html  huan-jing-gou-zhu.html  huremuwaku.html  poem.html  puroguramingu.html  puroguraminguyan-yu.html  puroguraminguyan-yu2.html  sekiyuritei.html  shu-xue.html  tsuru.html  xue-xi.html  yun-yong.html  yun-yong2.html  zhi-gan.html
dist-asset/: bundle.css  bundle.js  bundle.js.LICENSE.txt
docs/: CodingGuideline.md
feeds/: all.atom.xml  all.rss.xml  gou-xiang.atom.xml  gou-xiang.rss.xml  gui-fan.atom.xml  gui-fan.rss.xml  gui-ge.atom.xml  gui-ge.rss.xml  huan-jing-gou-zhu.atom.xml  huan-jing-gou-zhu.rss.xml  huremuwaku.atom.xml  huremuwaku.rss.xml  (+18 more)
(+567 files in other folders)
