[tool.poetry]
name = "blog"
version = "1.0.0"
description = ""
authors = ["Mizunashi Mana <contact@mizunashi.work>"]
package-mode = false

[tool.poetry.dependencies]
python = ">= 3.12.0,<4"
pelican = "*"
pillow = "*"
gitpython = "*"
beautifulsoup4 = "*"
pygments = "*"
pelican-search = "*"

[tool.poetry.dev-dependencies]
docutils = "*"
rstcheck = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
